--- a/css/style.css
+++ b/css/style.css
@@ -116,46 +116,59 @@ nav ul li a {
 
 section {
     width: 100%;
-    padding: 20px;
+    padding: 0;
     margin: 0;
 }
-#que-somos {
-    background: linear-gradient(180deg, #172B60 0%, #B230C8 105.18%);
+#aboutus {
     width: 100%;
-    height: 839.5px;
-    padding: 20px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
     justify-content: center;
-    text-align: center;
-}
-.que-somos-container {
-    width: 100%;
-    max-width: 1440px;
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    text-align: center;
+    position: relative;
+    background-image: url(/images/Rectangle\ 50.svg);
+    background-size: cover;
+    height: 100vh;
+}
+
+.aboutus-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    position: relative;
+}
+
+.content {
+    width: 819px;
+    height: 308px;
+    margin-top: -400px;
+    text-align: left;
     color: #fff;
 }
-.que-somos-container .content {
-    max-width: 800px;
-    margin-bottom: 20px;
-}
-.que-somos-container h1 {
+
+.content h1 {
     font-family: 'Barlow';
     font-size: 40px;
     font-weight: 700;
     line-height: 48px;
+    margin: 0 0 20px 0;
 }
-.que-somos-container p {
+
+.content p {
     font-family: 'Barlow';
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
+    margin: 0 0 20px 0;
 }
-.que-somos-container button {
+a.button-link {
+    text-decoration: none;
+    display: inline-block;
+}
+
+.content button {
     width: 206px;
     height: 61px;
     border: 1px solid rgba(255, 255, 255, 1);
@@ -168,12 +181,18 @@ section {
     cursor: pointer;
     margin-top: 20px;
 }
-.que-somos-container .image {
-    margin-top: 20px;
+
+.image {
+    position: absolute;
+    left: -380px;
+    top: -190px;
+    width: 1024px;
+    height: 768px;
+    opacity: 1;
 }
-.que-somos-container .image img {
+
+.image img {
     width: 100%;
-    max-width: 600px;
     height: auto;
 }
 
@@ -193,36 +212,43 @@ section {
     background: transparent;
 }
 
-.que-somos-container, .metodologia-container, .que-hacemos-container, .testimonios-container, .contacto-container {
+/*.aboutus-container, .metodologia-container, .que-hacemos-container, .testimonios-container, .contacto-container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
 
-.que-somos-container .content, .metodologia-container, .que-hacemos-container {
+.aboutus-container .content, .metodologia-container, .que-hacemos-container {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.que-somos-container .content h1, .metodologia-container h1, .que-hacemos-container h1, .testimonios-container h1, .contacto-container h1 {
-    font-size: 36px;
-    color: white;
-    margin-bottom: 20px;
+.aboutus-container .content h1, .metodologia-container h1, .que-hacemos-container h1, .testimonios-container h1, .contacto-container h1 {
+    font-family: 'Barlow';
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    text-align: left;
+    position: relative;
+
 }
 
-.que-somos-container .content p, .metodologia-container p, .que-hacemos-container p, .testimonios-container p, .contacto-container p {
-    font-size: 18px;
-    color: white;
-    max-width: 600px;
+.aboutus-container .content p, .metodologia-container p, .que-hacemos-container p, .testimonios-container p, .contacto-container p {
+    font-family: 'Barlow';
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    position: relative;
+    text-align: left;
 }
 
-.que-somos-container .image img, .testimonial-img, .contact-image img {
+.aboutus-container .image img, .testimonial-img, .contact-image img {
     max-width: 100%;
     height: auto;
     border-radius: 50%;
-}
+}*/
 
 .metodologia-boxes, .main-box, .secondary-box {
     display: flex;
