--- a/css/style.css
+++ b/css/style.css
@@ -197,36 +197,46 @@ a.button-link {
 }
 
 #methodology {
-    background: #fff;
-}
-.methodology-container{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    position: relative;
     width: 100%;
+    padding: 40px 0;
+    background-color: #fff;
+    margin-top: 50px;
+}
+
+.methodology-container {
+    width: 1209px;
+    margin: 0 auto; /* Centrar el contenedor horizontalmente */
+    text-align: center; /* Centrar el texto */
+}
+
+.methodology-container h1 {
     width: 1209px;
     height: 184px;
-top: 1857px;
-left: 115px;
-gap: 0px;
-opacity: 0px;
-
+    margin: 0 auto 20px; /* Centrar y agregar margen inferior para separación */
+    font-size: 2.5rem; /* Ajusta el tamaño según necesites */
+    line-height: 184px; /* Centrar verticalmente el texto */
 }
 
-.methodology-container h1{
-    font-family: 'Barlow';
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 48px;
-    margin: 0 0 20px 0;
+.methodology-container p {
+    width: 1209px;
+    margin: 0 auto 40px; /* Centrar y agregar margen inferior para separación */
+    font-size: 1rem; /* Ajusta el tamaño según necesites */
+    line-height: 1.5; /* Espaciado entre líneas */
 }
-.methodology-container p{
-    font-family: 'Barlow';
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 24px;
-    margin: 0 0 20px 0;
+
+.image-methodology {
+    width: 1241.58px;
+    height: 413.67px;
+    margin: 0 auto; /* Centrar la imagen horizontalmente */
 }
+
+.image-methodology img {
+    width: 100%;
+    height: auto;
+    display: block; /* Asegura que la imagen no tenga margen inferior extra */
+}
+
 #que-hacemos {
     background: rgba(26, 43, 82, 1);
 }
