--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,7 @@ a.button-link {
 #testimonials {
     position: relative;
     width: 100%;
-    height: 300px;
+    height: 600px;
     padding: 60px 0; 
     background-color: #FFFFFF;
 }
@@ -344,6 +344,7 @@ a.button-link {
     width: 1209px;
     margin: 0 auto;
     text-align: left; 
+    margin-top: 100px;
 }
 
 .testimonials-container h1 {
@@ -362,7 +363,7 @@ a.button-link {
     display: flex;
     align-items: center;
     gap: 90px;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .testimonial-image {
@@ -407,33 +408,82 @@ a.button-link {
     bottom: -40px; 
     right: -50px; 
 }
-
-#contacto {
-    background: transparent;
+#contact {
+    position: relative;
+    width: 100%;
+    height: 677px; 
+    background-image: url('/images/contact-bot.png'); 
+    background-repeat: no-repeat;
+    background-position: cover;
+    overflow: hidden;
+}
+.contact-container {
+    position: relative;
+    width: 100%;
+    height: 100%;   
+    box-sizing: border-box;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-left: 233px;
+    margin-top: 120px;
 }
 
+.contact-content {
+    text-align: right; 
+    color: #fff;
+    position: relative;
+    max-width: 600px; 
+}
 
-/*.aboutus-container .content h1, .methodology-container h1, .que-hacemos-container h1, .testimonios-container h1, .contacto-container h1 {
-    font-family: 'Barlow';
+.contact-content h1 {
+    font-family: 'Barlow', sans-serif;
     font-size: 40px;
     font-weight: 700;
     line-height: 48px;
+    margin: 0 0 20px 0;
     text-align: left;
-    position: relative;
-
+    text-transform: uppercase;
 }
 
-.aboutus-container .content p, .methodology-container p, .que-hacemos-container p, .testimonios-container p, .contacto-container p {
-    font-family: 'Barlow';
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    position: relative;
+.contact-info-box {
+    width: 581px;
+    height: 368px;
+    background: transparent;
+    margin-top: 60px;
     text-align: left;
-} */
+}
+
+.contact-info-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.contact-info-item a {
+    display: flex;
+    align-items: center;
+    text-decoration: none; 
+    color: #fff; 
+}
+
+.contact-info-item i {
+    font-size: 24px; /* Ajusta el tamaño del icono según sea necesario */
+    margin-right: 10px;
+    border-radius: 50%; /* Hace que el borde sea circular */
+    padding: 10px; /* Espacio alrededor del icono dentro del borde */
+}
+
+.contact-info-item span {
+    font-family: 'Barlow';
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    text-transform: uppercase;
+}
 
 footer {
-    width: 100%;
+    width: 1430px;
     text-align: center;
     padding: 20px;
     background: rgba(26, 43, 82, 1);
